descomplicando-kubernetes/day-14/pod-comply.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources:
      limits:
        cpu: 1
        memory: 128 
  dnsPolicy: ClusterFirst
  restartPolicy: Always
