descomplicando-kubernetes/day-14/add-label.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata: 
  name: add-label-namespace
spec:
  rules:
    - name: add-label-ns
      match:
        resources:
          kinds:
          - Namespace
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              policy: "enforcing"
