descomplicando-kubernetes/day-14/deny-root-image.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-runAsNonRoot
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Root? ai nao filhao"
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
